--- a/aruco_ros/CMakeLists.txt
+++ b/aruco_ros/CMakeLists.txt
@@ -50,6 +50,11 @@ add_executable(multi_board src/multi_board.cpp
 add_dependencies(multi_board ${PROJECT_NAME}_gencfg)
 target_link_libraries(multi_board ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 
+add_executable(any_multi_board src/any_multi_board.cpp
+                      src/aruco_ros_utils.cpp)
+add_dependencies(any_multi_board ${PROJECT_NAME}_gencfg)
+target_link_libraries(any_multi_board ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+
 
 
 add_executable(marker_publisher src/marker_publish.cpp
