--- a/aruco_ros/CMakeLists.txt
+++ b/aruco_ros/CMakeLists.txt
@@ -55,6 +55,11 @@ add_executable(any_multi_board src/any_multi_board.cpp
 add_dependencies(any_multi_board ${PROJECT_NAME}_gencfg)
 target_link_libraries(any_multi_board ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
 
+add_executable(aruco_football src/aruco_football.cpp
+                      src/aruco_ros_utils.cpp)
+add_dependencies(aruco_football ${PROJECT_NAME}_gencfg)
+target_link_libraries(aruco_football ${catkin_LIBRARIES} ${OpenCV_LIBRARIES})
+
 add_executable(any_multi_board_concurrent src/any_multi_board_concurrent.cpp
                       src/aruco_ros_utils.cpp)
 add_dependencies(any_multi_board_concurrent ${PROJECT_NAME}_gencfg)
